src/test/ui/parser/struct-literal-in-for.stderr
error: struct literals are not allowed here
  --> $DIR/struct-literal-in-for.rs:12:14
   |
LL |       for x in Foo {
   |  ______________^
LL | |         x: 3
LL | |     }.hi() {
   | |_____^
help: surround the struct literal with parentheses
   |
LL |     for x in (Foo {
LL |         x: 3
LL |     }).hi() {
   |

error[E0277]: `bool` is not an iterator
  --> $DIR/struct-literal-in-for.rs:12:14
   |
LL |       for x in Foo {
   |  ______________^
LL | |         x: 3
LL | |     }.hi() {
   | |__________^ `bool` is not an iterator
   |
   = help: the trait `std::iter::Iterator` is not implemented for `bool`
   = note: required by `std::iter::IntoIterator::into_iter`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
